--- a/src/index.html
+++ b/src/index.html
@@ -9,11 +9,6 @@
   <body>
     <h1>Hello, World !</h1>
     <div id="root"></div>
-    <script type="module">
-      import hello_word from "./hello.js";
-      import world_word from "./hello.js";
-      document.querySelector("#root").textContent =
-        hello_word + " " + world_word;
-    </script>
+    <script src="/dist/main.js" />
   </body>
 </html>
