--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,6 @@
   <body>
     <h1>Hello, World !</h1>
     <div id="root"></div>
-    <script src="/dist/main.js" />
+    <script src="/public/bundle.js" />
   </body>
 </html>
