--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <h1>Hello, World !</h1>
     <div id="root"></div>
-    <script src="/public/bundle.js" />
+    <script src="./public/index_bundle.js"></script>
+    <a href="./about.html">Go to About</a>
   </body>
 </html>
