--- a/public/about.html
+++ b/public/about.html
@@ -1,8 +1,10 @@
 <html lang="en">
+  <head>
+    <script defer src="about_bundle.js"></script>
+  </head>
   <body>
     <h1>Hello, World !</h1>
     <div id="root"></div>
-    <script src="./public/about_bundle.js"></script>
     <a href="./index.html">Go to Index</a>
   </body>
 </html>
