--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-  </head>
+  <script defer src="index_bundle.js"></script></head>
   <body>
     <h1>Hello, World !</h1>
     <div id="root"></div>
-    <script src="./public/index_bundle.js"></script>
     <a href="./about.html">Go to About</a>
   </body>
 </html>
