--- a/public/about.html
+++ b/public/about.html
@@ -1,7 +1,4 @@
-<html lang="en">
-  <head>
-    <script defer src="about_bundle.js"></script>
-  </head>
+<html lang="en"><head><script defer src="about_bundle.js"></script></head>
   <body>
     <h1>Hello, World !</h1>
     <div id="root"></div>
